force-app/main/default/objects/Customer__c/fields/I_am_fit__c.field-meta.xml
<CustomField>
    <fullName>I_am_fit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Customers health</description>
    <label>I am fit</label>
    <type>Checkbox</type>
</CustomField>