force-app/main/default/objects/Customer__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Unique ID for each customer</description>
    <displayFormat>A-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>