force-app/main/default/objects/Customer__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Customer Location</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_am_fit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>